--- a/style.css
+++ b/style.css
@@ -52,6 +52,16 @@ h2{
 }
 
 .block-2 {
+    background: url(resources/steamDashboard.gif) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-3 {
+    background: url(resources/coding.gif) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-4 {
     background: url(resources/coding.gif) no-repeat 50% 50%;
     background-size: cover;
 }
@@ -66,22 +76,14 @@ h2{
     left:0;
 }
 
-.block-3 {
-    background: url(resources/coding.gif) no-repeat 50% 50%;
-    background-size: cover;
-}
-
-.block-4 {
-    background: url(resources/coding.gif) no-repeat 50% 50%;
-    background-size: cover;
-}
-
 .container {
     margin-top: 200px;
 }
 
 .block-1 h1,
-.block-3 h1{
+.block-2 h1,
+.block-3 h1,
+.block-4 h1{
     color: white;
     z-index: 10;
     bottom: 40px;
@@ -89,28 +91,30 @@ h2{
 }
 
 .block-1 h2,
-.block-3 h2{
+.block-3 h2,
+.block-2 h2,
+.block-4 h2{
     color: white;
     z-index: 10;
     bottom: 0;
     right: -60px;
 }
 
-.block-2 h1,
-.block-4 h1{
-    color: white;
-    z-index: 10;
-    top: 0;
-    right: -60px;
-}
+/*.block-2 h1,*/
+/*.block-4 h1{*/
+/*    color: white;*/
+/*    z-index: 10;*/
+/*    top: 0;*/
+/*    right: -60px;*/
+/*}*/
 
-.block-2 h2,
-.block-4 h2{
-    color: white;
-    z-index: 10;
-    top: 75px;
-    right: -60px;
-}
+/*.block-2 h2,*/
+/*.block-4 h2{*/
+/*    color: white;*/
+/*    z-index: 10;*/
+/*    top: 75px;*/
+/*    right: -60px;*/
+/*}*/
 
 .center h1{
     color: rgba(0, 129, 255, 0.1);
