--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     width: 100%;
     height: 100%;
     color: #fff;
-    background: #18181c;
+    background: #191923;
     overflow: hidden;
     font: small-caps bold 24px/1 sans-serif;
 }
@@ -71,15 +71,22 @@ h2{
     content:"\A";
     width:100%;
     height:100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.5);
     position:absolute;
     top:0;
     left:0;
 }
 
-.block h1:hover{
-    color: #5252ff;
+.block:hover:after{
+    content:"\A";
+    width:100%;
+    height:100%;
+    background: rgba(0, 0, 0, 0.9);
+    position:absolute;
+    top:0;
+    left:0;
 }
+
 
 .container {
     margin-top: 200px;
@@ -89,7 +96,7 @@ h2{
 .block-2 h1,
 .block-3 h1,
 .block-4 h1{
-    color: white;
+    color: #FBFEF9;
     z-index: 10;
     bottom: 40px;
     right: -60px;
@@ -99,7 +106,7 @@ h2{
 .block-3 h2,
 .block-2 h2,
 .block-4 h2{
-    color: white;
+    color: #FBFEF9;
     z-index: 10;
     bottom: 0;
     right: -60px;
@@ -107,23 +114,14 @@ h2{
 
 
 .center h1{
-    color: rgba(0, 129, 255, 0.1);
+    color: #FBFEF9;
     font-size: 100px;
     font-weight: 700;
-    background-size: cover;
-    background-image: url(resources/gradient.jpg);
-    -webkit-background-clip: text;
-    animation: background-text-animation 15s linear infinite;
 }
 
-@keyframes background-text-animation {
-    0%{
-        background-position: left 0 top 50%;
-    }
-    50%{
-        background-position: left 1000px top 50%;
-    }
-    100%{
-        background-position: left 0 top 50%;
-    }
+.githubSvg{
+    position: absolute;
+    top: calc(40% - 45px);
+    left: calc(50% - 45px);
+    z-index: 10;
 }
