--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h2{
 }
 
 .block-3 {
-    background: url(resources/coding.gif) no-repeat 50% 50%;
+    background: url(resources/etz.png) no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -75,6 +75,10 @@ h2{
     position:absolute;
     top:0;
     left:0;
+}
+
+.block-3:after{
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .block:hover:after{
@@ -119,7 +123,7 @@ h2{
     font-weight: 700;
 }
 
-.githubSvg{
+.repoSvg{
     position: absolute;
     top: calc(40% - 45px);
     left: calc(50% - 45px);
